# gyrinx

./: .editorconfig  .env.example  .gitignore  .markdownlint-cli2.mjs  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  CHANGELOG.md  CLAUDE.md  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  SECURITY.md  base.env  baseline_test_performance.txt  claude-updated.yml  cloudbuild.yaml  development-update-2-short.md  development-update-2.md  docker-compose.yml  format-check.yml  manage  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  setup.py  test_format_cost_display.py
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  code-improvement-checklist.md  dependabot.yml  test-performance-config.md
analytics/: CLAUDE.md  query_patterns.md  structure.sql
bandit/: bandit-baseline.json  bandit-baseline.txt
content/: README.md
design/: Data Model.md  Deployment.md
docker/: entrypoint.sh
docs/: DESIGN-SYSTEM.md  README.md  SUMMARY.md  api.md  bootstrap-usage-guide.md  campaigns.md  claude-code-oauth-secrets-analysis.md  content.md  deployment-environment-variables.md  deployment.md  features.md  fighter-advancements.md  fighter-cost-system-design.md  fighter-cost-system-reference.md  gcs-cdn-setup.md  group-based-features.md  icon-usage.md  integration_testing.md  lists.md  logging-and-tracing-reference.md  manual-testing-guide.md  psykers.md  query-debugging-utilities.md  runbook.md  security-baseline.md  sql-debugging.md  technology-choices.md  test-performance-improvements.md  tracking.md  useful-scripts.md  weapon_display_logic.md
e2e/: smoke.spec.ts
gyrinx/: admin.py  asgi.py  conftest.py  forms.py  logging_filter.py  messages.py  models.py  query.py  settings.py  settings_dev.py  settings_prod.py  settings_test.py  storage_settings.py  tracing.py  tracker.py  urls.py  util.py  wsgi.py
infra/: .gitignore  README.md
notebooks/: pageref.ipynb
scripts/: README.md  activate_venv_hook.sh  analytics_restore.sh  check_migration_conflicts.sh  check_migrations.sh  cleanup-worktree-dbs.sh  dev.sh  entrypoint.sh  fmt-check.sh  fmt.sh  lint_templates.py  (+11 more)
(+1654 files in other folders)
