[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "content"
dynamic = ["version", "dependencies"]
requires-python = ">=3.12"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
schema = "scripts.schema:check"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -p no:warnings"

[tool.setuptools.packages]
find = {}
