[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "content"
dynamic = ["version", "dependencies"]
requires-python = ">=3.12"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
schema = "scripts.schema:check"
manage = "scripts.manage:main"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -p no:warnings"
DJANGO_SETTINGS_MODULE = "gyrinx.settings_dev"
python_files = "tests.py test_*.py *_tests.py"

[tool.setuptools.packages]
find = {}
