[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gyrinx"
dynamic = ["version", "dependencies"]
requires-python = ">=3.12"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
manage = "scripts.manage:main"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -p no:warnings"
DJANGO_SETTINGS_MODULE = "gyrinx.settings_dev"
python_files = "tests.py test_*.py *_tests.py"
markers = [
    "with_cost_cache: Enable real cost cache updates for this test (normally mocked for performance)",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]

[tool.djlint]
profile = "django"
custom_blocks = "element,slot,setvar,is_active"
ignore = "H006"

[tool.bandit]
exclude_dirs = [
    ".venv",
    ".git",
    "__pycache__",
    "*/migrations/*",
    "*/tests/*",
    "scripts/test.sh",
]
skips = [
    "B101",  # assert_used - we use assert in tests
    "B601",  # paramiko_calls - we don't use paramiko
    "B603",  # subprocess_without_shell_equals_true - reviewed case by case
]
